# karabo

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: admin_auth.py  auth.py  cloudinary_client.py  database.py  dependencies.py  main.py  models.py  models_additions.py  passwords.py  security.py
app/routes/: addresses.py  admin.py  admin_orders_advanced.py  admin_payments_advanced.py  admin_users.py  admin_users_advanced.py  auth.py  auto_pricing.py  bulk_price_update.py  cart.py  categories_brands.py  categories_router.py  coupons.py  health.py  homepage_sections.py  notifications.py  order_enhancements.py  orders.py  password_reset.py  payment_enhancements.py  payments.py  product_qa.py  products.py  random_products.py  recently_viewed.py  reviews.py  search.py  users.py  wallet.py  wishlist.py
app/uploads/: __init__.py  router.py  service.py
app/utils/: database.py  email.py
