[tool.poetry]
name = "karabo"
version = "0.1.0"
description = "Karabo backend"
authors = ["you"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

fastapi = "0.110.0"
uvicorn = { extras = ["standard"], version = "0.27.1" }

sqlalchemy = "2.0.25"
psycopg2-binary = "2.9.9"

python-jose = "3.3.0"
passlib = "1.7.4"
bcrypt = "4.0.1"

python-multipart = "0.0.9"
pydantic = "2.6.4"
email-validator = "2.1.0.post1"

python-dotenv = "1.0.1"
requests = "2.31.0"
